<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundBeige"
    android:id="@+id/notes_container"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_title"
                android:text="@string/Title"
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="8dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imageView_pin"
                android:layout_alignParentEnd="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_pin"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/textView_notes"
            android:text="@string/Notes"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:maxLines="10"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textView_date"
            android:text="@string/date"
            android:textStyle="normal"
            android:textColor="@color/grey"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textSize="14sp"
            android:maxLines="10"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>